# evis

./: .flake8  LICENSE  README.md  contributing.md  pyproject.toml
.github/workflows/: linting.yml  package-test.yml
evis/: __init__.py
evis/datasets/: __init__.py  nmnist.py
tests/: test_version.py
