[tool.poetry]
name = "evis"
version = "0.1.0"
description = ""
authors = ["abhijit_linux <f20190041@goa.bits-pilani.ac.in>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.11.0"
torchvision = "^0.12.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
pytest = "^7.1.2"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.3.0"
coverage = "^6.4.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
